--- a/examples/SubExperimentLayout.ipynb
+++ b/examples/SubExperimentLayout.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1a136d5a3a0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1932318a3a0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -75,6 +75,29 @@
    ],
    "source": [
     "sub_exp_layout.get_content()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<div style=\"margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;\">\n    <h2>Subexperiment Layout</h2>\n    \n    \n    <a href=\"data:text/csv;base64,UGxhdGUsV2VsbCxSb3csQ29sdW1uLE5hbWUNCg==\" download=\"Subexperiment Layout.csv\">DOWNLOAD .CSV FILE</a>\n    \n    \n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sub_exp_layout.get_html()"
    ],
    "metadata": {
     "collapsed": false,
