--- a/examples/Request.ipynb
+++ b/examples/Request.ipynb
@@ -2,8 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -21,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2cbdb1204f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1ed913506d0>"
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "from signals_notebook.entities.entity_store import EntityStore"
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "request = EntityStore.get('request:4ae37fac-9713-45c4-a0ac-be01b56660c3')"
@@ -73,30 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Request(type=<EntityType.REQUEST: 'request'>, eid='request:4ae37fac-9713-45c4-a0ac-be01b56660c3', digest='60125100', name='Request', description='', created_at=datetime.datetime(2022, 8, 8, 9, 25, 27, 191000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 8, 9, 28, 52, 353000, tzinfo=datetime.timezone.utc))"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "request"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "children = list(request.get_children())"
@@ -110,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "[TaskContainer(type=<EntityType.TASK_CONTAINER: 'taskContainer'>, eid='taskContainer:6e1ef147-7595-4352-963a-1d8074494903', digest='81218917', name='Task Container', description='', created_at=datetime.datetime(2022, 8, 8, 9, 25, 27, 191000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 8, 9, 26, 8, 284000, tzinfo=datetime.timezone.utc)),\n Word(type=<EntityType.WORD: 'viewonly'>, eid='viewonly:8571040e-8c83-49b9-862e-deb9a50e5838', digest='27778518', name='Document.docx', description='', created_at=datetime.datetime(2022, 8, 8, 9, 28, 51, 119000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 8, 9, 28, 51, 119000, tzinfo=datetime.timezone.utc))]"
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
@@ -162,10 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "outputs": [],
    "source": [
-    "taskContainer = EntityStore.get('taskContainer:6e1ef147-7595-4352-963a-1d8074494903')"
+    "from signals_notebook.entities import Request\n",
+    "\n",
+    "notebook = EntityStore.get('journal:151542f5-dcc2-4dc7-bfc3-c5f0d204ea4c')\n",
+    "request = Request.create(\n",
+    "    name='Example request created by SDK',\n",
+    "    description='Delete if you see this in UI',\n",
+    "    notebook=notebook,\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
@@ -176,19 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "File(name='Task+Container.txt', content=b'{\"cols\":[{\"key\":\"1\",\"title\":\"Task ID\",\"type\":\"link\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false,\"isTaskIdField\":true},{\"key\":\"2\",\"title\":\"Task Type\",\"type\":\"text\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false},{\"key\":\"3\",\"title\":\"Reference ID\",\"type\":\"link\",\"isEditableInRequest\":true,\"isEditableInExperiment\":false,\"isEntityUnderTest\":true},{\"key\":\"4\",\"title\":\"Requestor Comment\",\"type\":\"text\",\"isEditableInRequest\":true,\"isEditableInExperiment\":false},{\"key\":\"5\",\"title\":\"Analyst Comment\",\"type\":\"text\",\"isEditableInRequest\":false,\"isEditableInExperiment\":true},{\"key\":\"6\",\"title\":\"Required By\",\"type\":\"datetime\",\"isEditableInRequest\":true,\"isEditableInExperiment\":false},{\"key\":\"7\",\"title\":\"Analyst\",\"type\":\"user\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false},{\"key\":\"8\",\"title\":\"Experiment Link\",\"type\":\"link\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false,\"hideInExperiment\":true},{\"key\":\"9\",\"title\":\"Request Link\",\"type\":\"link\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false,\"hideInRequest\":true},{\"key\":\"10\",\"title\":\"Status\",\"type\":\"attributeList\",\"attributeListEid\":\"attribute:14\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false,\"isStatusField\":true},{\"key\":\"11\",\"title\":\"Attached Docs\",\"type\":\"childEntityCount\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false},{\"key\":\"100\",\"title\":\"My Assigned To (SK)\",\"type\":\"list\",\"options\":[\"Sergey Kuznetsov\",\"Anatoliy Kind\",\"Darya Korkina\"],\"isEditableInRequest\":true,\"isEditableInExperiment\":true},{\"key\":\"12\",\"title\":\"Creator\",\"type\":\"user\",\"isEditableInRequest\":false,\"isEditableInExperiment\":false},{\"key\":\"13\",\"title\":\"Created Date\",\"type\":\"datetime\",\"hidden\":true,\"isEditableInRequest\":false,\"isEditableInExperiment\":false}],\"rows\":[{\"_id\":\"58a4cd6c-1b25-4f0c-8b82-a359a2a732bf\",\"sourceEid\":\"task:73bb7697-e3fd-4dc0-9653-ae3da440dbe1\",\"eid\":\"task:596625fb-cdeb-4ca2-8dae-c72eb97510c0\",\"1\":{\"auto\":\"Task-88\",\"value\":\"task:596625fb-cdeb-4ca2-8dae-c72eb97510c0\",\"type\":\"task\"},\"2\":{\"auto\":\"Task\",\"value\":\"Task\"},\"3\":{\"user\":\"\",\"values\":[]},\"4\":{},\"5\":{},\"6\":{},\"7\":{},\"8\":{},\"9\":{\"auto\":\"Request\",\"value\":\"request:4ae37fac-9713-45c4-a0ac-be01b56660c3\",\"type\":\"request\"},\"10\":{\"auto\":\"New\",\"value\":\"New\"},\"11\":{\"eid\":\"task:596625fb-cdeb-4ca2-8dae-c72eb97510c0\",\"auto\":\"0\",\"value\":\"0\"},\"100\":{},\"12\":{\"auto\":{\"userId\":\"136\",\"userName\":\"daniil.cherednichenko@quantori.com\",\"email\":\"daniil.cherednichenko@quantori.com\",\"firstName\":\"Daniil\",\"lastName\":\"Cherednichenko\",\"picture\":{}},\"value\":{\"userId\":\"136\",\"userName\":\"daniil.cherednichenko@quantori.com\",\"email\":\"daniil.cherednichenko@quantori.com\",\"firstName\":\"Daniil\",\"lastName\":\"Cherednichenko\",\"picture\":{}}},\"status\":\"new\",\"validStateTransitions\":[\"delete\",\"submit\"],\"requestTaskContainerEid\":\"taskContainer:6e1ef147-7595-4352-963a-1d8074494903\"},{\"_id\":\"278cb156-183d-4d3c-b1f0-2fdcac483b29\",\"sourceEid\":\"task:c3d74311-444e-4805-8406-55ae3c21318c\",\"eid\":\"task:301214df-212b-4956-8cc0-f18d58d7d572\",\"1\":{\"auto\":\"Task-89\",\"value\":\"task:301214df-212b-4956-8cc0-f18d58d7d572\",\"type\":\"task\"},\"2\":{\"auto\":\"Test\",\"value\":\"Test\"},\"3\":{\"user\":\"\",\"values\":[]},\"4\":{},\"5\":{},\"6\":{},\"7\":{},\"8\":{},\"9\":{\"auto\":\"Request\",\"value\":\"request:4ae37fac-9713-45c4-a0ac-be01b56660c3\",\"type\":\"request\"},\"10\":{\"auto\":\"New\",\"value\":\"New\"},\"11\":{\"eid\":\"task:301214df-212b-4956-8cc0-f18d58d7d572\",\"auto\":\"0\",\"value\":\"0\"},\"12\":{\"auto\":{\"userId\":\"136\",\"userName\":\"daniil.cherednichenko@quantori.com\",\"email\":\"daniil.cherednichenko@quantori.com\",\"firstName\":\"Daniil\",\"lastName\":\"Cherednichenko\",\"picture\":{}},\"value\":{\"userId\":\"136\",\"userName\":\"daniil.cherednichenko@quantori.com\",\"email\":\"daniil.cherednichenko@quantori.com\",\"firstName\":\"Daniil\",\"lastName\":\"Cherednichenko\",\"picture\":{}}},\"status\":\"new\",\"validStateTransitions\":[\"delete\",\"submit\"],\"requestTaskContainerEid\":\"taskContainer:6e1ef147-7595-4352-963a-1d8074494903\"},{\"_id\":\"8f5cde58-6c3f-4355-a590-729ad52dc92f\",\"sourceEid\":\"task:aad65584-f51d-4368-bc66-819c5d5b7f9f\",\"eid\":\"task:79c47cd7-905b-4714-bb46-441b4b95c89f\",\"1\":{\"auto\":\"Task-90\",\"value\":\"task:79c47cd7-905b-4714-bb46-441b4b95c89f\",\"type\":\"task\"},\"2\":{\"auto\":\"Investigation\",\"value\":\"Investigation\"},\"3\":{\"user\":\"\",\"values\":[]},\"4\":{},\"5\":{},\"6\":{},\"7\":{},\"8\":{},\"9\":{\"auto\":\"Request\",\"value\":\"request:4ae37fac-9713-45c4-a0ac-be01b56660c3\",\"type\":\"request\"},\"10\":{\"auto\":\"New\",\"value\":\"New\"},\"11\":{\"eid\":\"task:79c47cd7-905b-4714-bb46-441b4b95c89f\",\"auto\":\"0\",\"value\":\"0\"},\"12\":{\"auto\":{\"userId\":\"136\",\"userName\":\"daniil.cherednichenko@quantori.com\",\"email\":\"daniil.cherednichenko@quantori.com\",\"firstName\":\"Daniil\",\"lastName\":\"Cherednichenko\",\"picture\":{}},\"value\":{\"userId\":\"136\",\"userName\":\"daniil.cherednichenko@quantori.com\",\"email\":\"daniil.cherednichenko@quantori.com\",\"firstName\":\"Daniil\",\"lastName\":\"Cherednichenko\",\"picture\":{}}},\"status\":\"new\",\"validStateTransitions\":[\"delete\",\"submit\"],\"requestTaskContainerEid\":\"taskContainer:6e1ef147-7595-4352-963a-1d8074494903\"}]}', content_type='text/plain')"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 21,
+   "outputs": [],
    "source": [
-    "taskContainer.get_content()"
+    "from signals_notebook.entities import Excel\n",
+    "\n",
+    "excel = Excel.create(container=request, name='Hey', content=b'New!!!!')"
    ],
    "metadata": {
     "collapsed": false,
@@ -199,7 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "EntityStore.delete(request.eid)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "outputs": [],
    "source": [],
    "metadata": {
