--- a/examples/AdminDefinedObject.ipynb
+++ b/examples/AdminDefinedObject.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1affacf04f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1bd2cef04f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -66,7 +66,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "AdminDefinedObject(type=<EntityType.ADO: 'ado'>, eid='ado-2:263eb93b-2404-461f-85e0-1a71d0567cd3', digest='76548067', name='TEST121233', description='', created_at=datetime.datetime(2022, 8, 9, 11, 5, 31, 614000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 9, 11, 5, 31, 614000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "AdoType[TypeName](id='2', base_type='experiment', ado_name=<TypeName.NEW_OBJECT: 'New System Object (SK)'>)"
      },
      "execution_count": 4,
      "metadata": {},
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "ado"
+    "ado.ado"
    ],
    "metadata": {
     "collapsed": false,
@@ -151,16 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'data': {'type': <EntityType.ADO: 'ado'>, 'meta': {'adoTypeName': 'New System Object (SK)'}, 'attributes': {'name': 'AdminDefinedObject experiment created by SDK', 'description': 'Delete if you see this in UI'}, 'relationships': {'ancestors': {'data': [{'type': <EntityType.NOTEBOOK: 'journal'>, 'id': 'journal:151542f5-dcc2-4dc7-bfc3-c5f0d204ea4c'}]}}}}\n"
-     ]
-    }
-   ],
+   "execution_count": 8,
+   "outputs": [],
    "source": [
     "from signals_notebook.entities import AdminDefinedObject\n",
     "\n",
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "EntityStore.delete(new_ado.eid)"
